Use Java 16 for building Armeria
- We now use JDK 16 instead of 15 for building and releasing Armeria.
- Opened up the necessary internal JDK modules so that the build doesn't fail.
- Forked Netty's `SelfSignedCertificate` and its related classes,
  because it doesn't work with Java 16+.
- Renamed `BouncyCastleKeyFactoryProvider` to `MinifiedBouncyCastleProvider`
  - It now provides X.509 `CertificateFactorySpi` implementation as well,
    so it can be used for generating self-signed certificates.
- Fixes #3673